--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "prepare": "husky install",
     "format": "prettier --write .",
+    "serve": "nodemon src/index.ts",
+    "start": "node dist/index.js",
     "build": "tsc",
     "watch": "tsc -w"
   },
@@ -27,6 +29,10 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.36.0",
@@ -37,5 +43,11 @@
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
