chore(.env): add node_env and port variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# production | development
+NODE_ENV = development
+
+# *optional* custom port (the default port is 8080)
+PORT = 
+
 # lk21 (layarkaca21) url
 LK21_URL = https://tv.lk21official.live
 
