chore(.env): update lk21 and nontondrama urls

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ NODE_ENV = development
 PORT = 
 
 # lk21 (layarkaca21) url
-LK21_URL = https://tv.lk21official.live
+LK21_URL = https://nonton.lk21official.wiki
 
 # nontondrama url
-ND_URL = https://drama2.nontondrama.lol
+ND_URL = https://tv.nontondrama.lol
