--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "lk21-api",
-  "version": "1.0.0",
-  "description": "Unofficial LK21 API",
-  "main": "dist/index.js",
-  "scripts": {
-    "prepare": "husky install",
-    "format": "prettier --write .",
-    "serve": "nodemon src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc",
-    "watch": "tsc -w"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/febriadj/lk21-api.git"
-  },
-  "keywords": [
-    "lk21-api",
-    "movies-streaming",
-    "web-scraping"
-  ],
-  "author": "Febriadji",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/febriadj/lk21-api/issues"
-  },
-  "homepage": "https://github.com/febriadj/lk21-api#readme",
-  "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@types/cheerio": "^0.22.31",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^18.15.3",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
-    "nodemon": "^2.0.21",
-    "prettier": "^2.8.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "axios": "^1.3.4",
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0"
-  }
+    "name": "lk21-api",
+    "version": "1.0.0",
+    "description": "Unofficial LK21 API",
+    "main": "dist/index.js",
+    "private": true,
+    "scripts": {
+        "prepare": "husky install",
+        "format": "prettier --write .",
+        "serve": "nodemon src/index.ts",
+        "start": "node dist/index.js",
+        "build": "tsc",
+        "watch": "tsc -w"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/febriadj/lk21-api.git"
+    },
+    "keywords": [
+        "lk21-api",
+        "movies-streaming",
+        "web-scraping"
+    ],
+    "author": "Febriadji",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/febriadj/lk21-api/issues"
+    },
+    "homepage": "https://github.com/febriadj/lk21-api#readme",
+    "devDependencies": {
+        "@commitlint/cli": "^17.4.4",
+        "@commitlint/config-conventional": "^17.4.4",
+        "@types/cheerio": "^0.22.31",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/morgan": "^1.9.4",
+        "@types/node": "^18.15.3",
+        "@typescript-eslint/eslint-plugin": "^5.55.0",
+        "@typescript-eslint/parser": "^5.55.0",
+        "eslint": "^8.36.0",
+        "eslint-config-prettier": "^8.7.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.3",
+        "nodemon": "^2.0.21",
+        "prettier": "^2.8.4",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5"
+    },
+    "dependencies": {
+        "axios": "^1.3.4",
+        "cheerio": "^1.0.0-rc.12",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "morgan": "^1.10.0"
+    }
 }
