--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "description": "Unofficial LK21 API",
     "main": "dist/index.js",
     "private": true,
+    "_moduleAliases": {
+        "@": "dist"
+    },
     "scripts": {
-        "prepare": "husky install",
-        "format": "prettier --write .",
-        "serve": "nodemon src/index.ts",
-        "start": "node dist/index.js",
         "build": "tsc",
-        "watch": "tsc -w"
+        "watch": "tsc -w",
+        "serve": "concurrently \"npm run watch\" \"nodemon dist/index.js\"",
+        "start": "node dist/index.js",
+        "prepare": "husky install",
+        "format": "prettier --write ."
     },
     "repository": {
         "type": "git",
@@ -49,9 +52,11 @@
     "dependencies": {
         "axios": "^1.3.4",
         "cheerio": "^1.0.0-rc.12",
+        "concurrently": "^8.2.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "module-alias": "^2.2.3",
         "morgan": "^1.10.0"
     }
 }
