chore(.env): update lk21 and nontondrama urls

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@ NODE_ENV = development
 PORT = 
 
 # lk21 (layarkaca21) url
-LK21_URL = https://nonton.lk21official.wiki
+LK21_URL = https://tv15.lk21official.my
 
 # nontondrama url
-ND_URL = https://tv.nontondrama.lol
+ND_URL = https://tv14.nontondrama.click
+DL_URL = https://tv15.lk21official.my
